cmake_minimum_required(VERSION 3.27)
project(Academia)

set(CMAKE_CXX_STANDARD 20)

add_executable(Academia
#        main.cpp
#        main2.cpp
#        Multiple.cpp
#        heirarchical.cpp
#        Hybrid.cpp
#        "Module 5.cpp"
#        "Circular Queue implementation..cpp"
        "Selection sort algo.cpp"
        #        "OOP Module 5 exception handling.cpp"
#        "OOP Module 5 STL.cpp"
#        "OOP Module 5 Template.cpp"
)
